--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,3 +69,12 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+
+csa_guzzle:
+    profiler: '%kernel.debug%'
+    logger : true
+    clients:
+        OMDB_api:
+            config:
+                base_url: 'http://www.omdbapi.com'
