--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,17 +1,46 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
-
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
+        chain_provider:
+            chain:
+                providers: [in_memory, user_db]
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    florian:
+                        password: '$2y$13$SiiSauR.Ax1hZlQXBhVda.zuiCLT5WSJBsF3WBDFdREbQmb40ua3y' #test
+                        roles: 'ROLE_USER'
+        user_db:
+            entity:
+                class: AppBundle\Entity\user
+                property: email
+
+    encoders:
+        Symfony\Component\Security\Core\User\User: bcrypt
+        AppBundle\Entity\User: bcrypt
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
+        login:
+            pattern: ^/login$
+            anonymous: ~
+
+        secured_area:
+            pattern : ^/
+            provider : user_db
+            form_login:
+                login_path : /login
+                check_path : /login_check
+                username_parameter : email
+                password_parameter : password
+                always_use_default_target_path : true
+            logout: ~
 
         main:
             anonymous: ~
