--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -40,14 +40,11 @@ security:
                 username_parameter : email
                 password_parameter : password
                 always_use_default_target_path : true
-            logout: ~
+            logout:
 
         main:
             anonymous: ~
-            # activate different ways to authenticate
 
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+    access_control:
+      - path: ^/user$
+        roles: ['ROLE_ADMIN']
