Multiple show for User + bugfix user connection

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,7 +14,7 @@ security:
                         roles: 'ROLE_USER'
         user_db:
             entity:
-                class: AppBundle\Entity\user
+                class: AppBundle\Entity\User
                 property: email
 
     encoders:
