--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -40,7 +40,12 @@ services:
 
     AppBundle\ShowFinder\OMDBFinder:
         arguments:
-          $client : '@csa_guzzle.client.OMDB_api'
-          $apiKey : '%omdb_api_key%'
-          $tokenStorage: "@security.token_storage"
+            $client : '@csa_guzzle.client.OMDB_api'
+            $apiKey : '%omdb_api_key%'
+            $tokenStorage: "@security.token_storage"
         tags: ['show.finder']
+
+    AppBundle\Security\Authorization\ShowVoter:
+        tags: ['security.voter']
+        AppBundle\Security\Authorization\UserVoter:
+        tags: ['security.voter']
