FIn de cours 20 - 02

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,6 +31,10 @@ security:
             pattern: ^/login$
             anonymous: ~
 
+        api:
+            pattern: ^/api
+            anonymous: ~
+
         secured_area:
             pattern : ^/
             provider : user_db
