--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,17 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+api:
+    resource: '@AppBundle/API/'
+    prefix : /api
+
+app.swagger_ui:
+    path: /api/doc
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+
+app.swagger:
+    path: /api/doc.json
+    methods: GET
+    defaults: { _controller: nelmio_api_doc.controller.swagger }
